# rust-zipkin

./: .gitignore  Cargo.toml  README.md  circle.yml
.circleci/: config.yml
.palantir/: autorelease.yml
futures-zipkin/: Cargo.toml
futures-zipkin/src/: lib.rs
http-zipkin/: Cargo.toml
http-zipkin/src/: lib.rs
hyper-zipkin/: Cargo.toml
hyper-zipkin/src/: lib.rs
zipkin/: Cargo.toml
zipkin-macros/: Cargo.toml
zipkin-macros/src/: lib.rs
zipkin-reporter-http/: Cargo.toml
zipkin-reporter-http/src/: error.rs  lib.rs  span_body.rs
zipkin-types/: Cargo.toml
zipkin-types/src/: annotation.rs  endpoint.rs  lib.rs  sampling_flags.rs  span.rs  span_id.rs  trace_context.rs  trace_id.rs
zipkin/src/: annotation.rs  binary_annotation.rs  current.rs  endpoint.rs  lib.rs  open_span.rs  report.rs  sample.rs  sampling_flags.rs  span.rs  span_id.rs  test.rs  trace_context.rs  trace_id.rs  tracer.rs
zipkin/src/test/: macros.rs  mod.rs
