[package]
name = "futures-zipkin"
version = "0.2.0"
authors = ["Steven Fackler <sfackler@palantir.com>"]
license = "Apache-2.0"
description = "Futures support for Zipkin tracing"
repository = "https://github.com/palantir/rust-zipkin"
readme = "../README.md"
categories = ["network-programming", "web-programming"]
keywords = ["zipkin", "tracing"]

[dependencies]
futures = "0.1"
zipkin = { version = "0.2.0", path = "../zipkin" }
