[package]
name = "http-zipkin"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@palantir.com>"]
license = "Apache-2.0"
description = "HTTP header propagation for Zipkin trace information."
repository = "https://github.com/palantir/rust-zipkin"
readme = "../README.md"
categories = ["web-programming"]
keywords = ["zipkin", "tracing"]

[dependencies]
http = "0.1"
zipkin = "0.3"
