[package]
name = "http-zipkin"
version.workspace = true
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2018"
license = "Apache-2.0"
description = "HTTP header propagation for Zipkin trace information."
repository = "https://github.com/palantir/rust-zipkin"
readme = "../README.md"
categories = ["web-programming"]
keywords = ["zipkin", "tracing"]

[dependencies]
http = "1.0"
zipkin = { version = "1.1.0", path = "../zipkin" }
