[package]
name = "hyper-zipkin"
version = "0.2.0"
authors = ["Steven Fackler <sfackler@palantir.com>"]
license = "Apache-2.0"
description = "Hyper header definitions for standard Zipkin headers"
repository = "https://github.com/palantir/rust-zipkin"
documentation = "https://docs.rs/hyper-zipkin/0.2"
readme = "../README.md"
categories = ["web-programming"]
keywords = ["zipkin", "tracing"]

[dependencies]
hyper = { version = "0.11", default-features = false }

zipkin = { version = "0.1.0", path = "../zipkin" }
