[package]
name = "hyper-zipkin"
version = "0.3.1"
authors = ["Steven Fackler <sfackler@palantir.com>"]
license = "Apache-2.0"
description = "Hyper header definitions for standard Zipkin headers"
repository = "https://github.com/palantir/rust-zipkin"
readme = "../README.md"
categories = ["web-programming"]
keywords = ["zipkin", "tracing"]

[dependencies]
hyper = { version = "0.11", default-features = false }

zipkin = { version = "0.3.0", path = "../zipkin" }
