[package]
name = "zipkin"
version.workspace = true
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A library for collecting timing information about distributed computations"
repository = "https://github.com/palantir/rust-zipkin"
readme = "../README.md"
categories = ["network-programming", "web-programming"]
keywords = ["zipkin", "tracing"]

[package.metadata.docs.rs]
all-features = true

[features]
serde = ["zipkin-types/serde"]
macros = ["zipkin-macros"]

[dependencies]
log = "0.4"
lazycell = "1.0"
pin-project-lite = "0.2"
rand = "0.10"

zipkin-macros = { version = "1.1.0", optional = true, path = "../zipkin-macros" }
zipkin-types = { version = "1.1.0", path = "../zipkin-types" }

[dev-dependencies]
futures = "0.3"
